examples/manifests/container-state.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubetui-container-state
spec:
  selector:
    matchLabels: # or matchExpressions:
      app: kubetui-container-state
  template:
    metadata:
      labels:
        app: kubetui-container-state
    spec:
      containers:
        - name: app
          image: alpine
          command:
            - sh
            - -c
          args:
            - "sleep 10 && echo hoge && exit 0"
