examples/manifests/running.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubetui-running
spec:
  selector:
    matchLabels: # or matchExpressions:
      app: kubetui-running
  template:
    metadata:
      labels:
        app: kubetui-running
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
              name: http
